update notebook to latest SK lib

--- a/e2-first-dish/notebook.ipynb
+++ b/e2-first-dish/notebook.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -73,7 +73,7 @@
    "source": [
     "#!import ../config/Settings.cs\n",
     "\n",
-    "bool useAzureOpenAI = false;\n",
+    "bool useAzureOpenAI = true;\n",
     "\n",
     "await Settings.AskAzureEndpoint(useAzureOpenAI);\n",
     "await Settings.AskModel(useAzureOpenAI);\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -146,26 +146,27 @@
    },
    "outputs": [],
    "source": [
-    "#r \"nuget: Microsoft.SemanticKernel, 0.9.61.1-preview\"\n",
+    "#r \"nuget: Microsoft.SemanticKernel, 0.15.230531.5-preview\"\n",
     "\n",
     "#!import ../config/Settings.cs\n",
     "\n",
     "using Microsoft.SemanticKernel;\n",
-    "using Microsoft.SemanticKernel.KernelExtensions;\n",
     "using System.IO;\n",
-    "using Microsoft.SemanticKernel.Configuration;\n",
     "using Microsoft.SemanticKernel.SemanticFunctions;\n",
-    "\n",
-    "IKernel kernel = Microsoft.SemanticKernel.Kernel.Builder.Build();\n",
     "\n",
     "// Grab the locally stored credentials from the settings.json file. \n",
     "// Name the service as \"davinci\" — assuming that you're using one of the davinci completion models. \n",
     "var (useAzureOpenAI, model, azureEndpoint, apiKey, orgId) = Settings.LoadFromFile();\n",
     "\n",
-    "if (useAzureOpenAI)\n",
-    "    kernel.Config.AddAzureOpenAITextCompletion(\"davinci\", model, azureEndpoint, apiKey);\n",
-    "else\n",
-    "    kernel.Config.AddOpenAITextCompletion(\"davinci\", model, apiKey, orgId);"
+    "KernelBuilder builder = Microsoft.SemanticKernel.Kernel.Builder;\n",
+    "\n",
+    "builder.WithAzureChatCompletionService(\n",
+    "    deploymentName: model,\n",
+    "    endpoint: azureEndpoint,\n",
+    "    apiKey: apiKey\n",
+    ");\n",
+    "\n",
+    "IKernel kernel = builder.Build();"
    ]
   },
   {
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -250,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -261,7 +262,6 @@
    },
    "outputs": [],
    "source": [
-    "using Microsoft.SemanticKernel.KernelExtensions;\n",
     "using Microsoft.SemanticKernel.SemanticFunctions;\n",
     "\n",
     "var promptConfig = new PromptTemplateConfig\n",
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
