--- a/e4-memories/notebook.ipynb
+++ b/e4-memories/notebook.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -73,33 +73,35 @@
    },
    "outputs": [],
    "source": [
-    "#r \"nuget: Microsoft.SemanticKernel, 0.9.61.1-preview\"\n",
+    "#r \"nuget: Microsoft.SemanticKernel, 0.15.230531.5-preview\"\n",
     "\n",
     "#!import ../config/Settings.cs\n",
     "\n",
     "using Microsoft.SemanticKernel;\n",
-    "using Microsoft.SemanticKernel.KernelExtensions;\n",
     "using System.IO;\n",
-    "using Microsoft.SemanticKernel.Configuration;\n",
     "using Microsoft.SemanticKernel.SemanticFunctions;\n",
     "using Microsoft.SemanticKernel.CoreSkills;\n",
     "using Microsoft.SemanticKernel.Memory;\n",
     "\n",
     "var (useAzureOpenAI, model, azureEndpoint, apiKey, orgId) = Settings.LoadFromFile();\n",
     "\n",
-    "var kernel =  Microsoft.SemanticKernel.Kernel.Builder\n",
-    ".Configure(c =>\n",
-    "{\n",
-    "    if (useAzureOpenAI) {\n",
-    "        c.AddAzureOpenAITextCompletion(\"davinci\", model, azureEndpoint, apiKey);\n",
-    "        c.AddAzureOpenAIEmbeddingGeneration(\"ada\", \"text-embedding-ada-002\", azureEndpoint, apiKey);\n",
-    "    } else {\n",
-    "        c.AddOpenAITextCompletion(\"davinci\", model, apiKey, orgId);\n",
-    "        c.AddOpenAIEmbeddingGeneration(\"ada\", \"text-embedding-ada-002\", apiKey, orgId);\n",
-    "    }\n",
-    "})\n",
-    ".WithMemoryStorage(new VolatileMemoryStore())\n",
-    ".Build();\n"
+    "\n",
+    "KernelBuilder builder = Microsoft.SemanticKernel.Kernel.Builder;\n",
+    "\n",
+    "builder\n",
+    "    .WithAzureChatCompletionService(\n",
+    "        deploymentName: model,\n",
+    "        endpoint: azureEndpoint,\n",
+    "        apiKey: apiKey\n",
+    "    )\n",
+    "    .WithAzureTextEmbeddingGenerationService(\n",
+    "        deploymentName: \"TextAda2Tests\",\n",
+    "        endpoint: azureEndpoint,\n",
+    "        apiKey: apiKey\n",
+    "    )\n",
+    "    .WithMemoryStorage(new VolatileMemoryStore());\n",
+    "\n",
+    "IKernel kernel = builder.Build();\n"
    ]
   },
   {
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -157,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -194,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -216,8 +218,8 @@
     "\n",
     "await foreach (MemoryQueryResult memory in memories)\n",
     "{\n",
-    "    if (counter == 0) { relatedMemory = memory.Text; }\n",
-    "    Console.WriteLine($\"Result {++counter}:\\n  >> {memory.Id}\\n  Text: {memory.Text}  Relevance: {memory.Relevance}\\n\");\n",
+    "    if (counter == 0) { relatedMemory = memory.Metadata.Text; }\n",
+    "    Console.WriteLine($\"Result {++counter}:\\n  >> {memory.Metadata.Id}\\n  Text: {memory.Metadata.Text}  Relevance: {memory.Relevance}\\n\");\n",
     "}"
    ]
   },
@@ -231,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -305,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -388,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -408,8 +410,8 @@
     "var memories = kernel.Memory.SearchAsync(lincolnMemoryCollectionName, myPrompt, limit: 5, minRelevanceScore: 0.77);\n",
     "\n",
     "await foreach (MemoryQueryResult memory in memories) {\n",
-    "    Console.WriteLine($\"Result {++aCounter}:\\n  >> {memory.Id}\\n  Text: {memory.Text}  Relevance: {memory.Relevance}\\n\");\n",
-    "    myMemory += memory.Text + \" \";\n",
+    "    Console.WriteLine($\"Result {++aCounter}:\\n  >> {memory.Metadata.Id}\\n  Text: {memory.Metadata.Text}  Relevance: {memory.Relevance}\\n\");\n",
+    "    myMemory += memory.Metadata.Text + \" \";\n",
     "}\n",
     "\n",
     "Console.WriteLine(\"Memory to feed back into the prompt will be:\\n  >> \" + myMemory+ \"\\n\");\n",
