--- a/e5-connectors/notebook.ipynb
+++ b/e5-connectors/notebook.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -54,25 +54,24 @@
    },
    "outputs": [],
    "source": [
-    "#r \"nuget: Microsoft.SemanticKernel, 0.9.61.1-preview\"\n",
-    "#r \"nuget: Microsoft.SemanticKernel.Skills.Web, 0.9.61.1-preview\"\n",
+    "#r \"nuget: Microsoft.SemanticKernel, 0.15.230531.5-preview\"\n",
+    "#r \"nuget: Microsoft.SemanticKernel.Skills.Web, 0.15.230531.5-preview\"\n",
     "\n",
     "#!import ../config/Settings.cs\n",
     "\n",
     "using Microsoft.SemanticKernel;\n",
-    "using Microsoft.SemanticKernel.KernelExtensions;\n",
-    "using Microsoft.SemanticKernel.Configuration;\n",
     "using Microsoft.SemanticKernel.SemanticFunctions;\n",
     "using Microsoft.SemanticKernel.Orchestration;\n",
     "\n",
-    "IKernel kernel = Microsoft.SemanticKernel.Kernel.Builder.Build();\n",
-    "\n",
     "var (useAzureOpenAI, model, azureEndpoint, apiKey, orgId) = Settings.LoadFromFile();\n",
     "\n",
-    "if (useAzureOpenAI)\n",
-    "    kernel.Config.AddAzureOpenAITextCompletion(\"davinci\", model, azureEndpoint, apiKey);\n",
-    "else\n",
-    "    kernel.Config.AddOpenAITextCompletion(\"davinci\", model, apiKey, orgId);"
+    "IKernel kernel = Microsoft.SemanticKernel.Kernel.Builder\n",
+    "    .WithAzureChatCompletionService(\n",
+    "        deploymentName: model,\n",
+    "        endpoint: azureEndpoint,\n",
+    "        apiKey: apiKey\n",
+    "    )\n",
+    "    .Build();"
    ]
   },
   {
@@ -87,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -112,7 +111,7 @@
     "\n",
     "var bingResult = await kernel.RunAsync(\n",
     "    \"What's the tallest building in NYC?\", \n",
-    "    web[\"SearchAsync\"]\n",
+    "    web[\"Search\"]\n",
     ");\n",
     "Console.WriteLine(bingResult);"
    ]
@@ -148,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -172,7 +171,7 @@
     "\n",
     "var result = await kernel.RunAsync(\n",
     "    \"What's the tallest building in NYC?\", \n",
-    "    web[\"SearchAsync\"],\n",
+    "    web[\"Search\"],\n",
     "    myInlineSemanticFunction\n",
     ");\n",
     "\n",
@@ -191,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -210,7 +209,7 @@
     "\n",
     "var result = await kernel.RunAsync(\n",
     "    \"What's the tallest building in NYC?\", \n",
-    "    web[\"SearchAsync\"],\n",
+    "    web[\"Search\"],\n",
     "    myInlineSemanticFunction,\n",
     "    mySkill[\"Notegen\"]\n",
     ");\n",
