--- a/e6-design-chain/notebook.ipynb
+++ b/e6-design-chain/notebook.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -60,26 +60,25 @@
    },
    "outputs": [],
    "source": [
-    "#r \"nuget: Microsoft.SemanticKernel, 0.9.61.1-preview\"\n",
+    "#r \"nuget: Microsoft.SemanticKernel, 0.15.230531.5-preview\"\n",
     "\n",
     "#!import ../config/Settings.cs\n",
     "\n",
     "using Microsoft.SemanticKernel;\n",
-    "using Microsoft.SemanticKernel.KernelExtensions;\n",
     "using System.IO;\n",
-    "using Microsoft.SemanticKernel.Configuration;\n",
     "using Microsoft.SemanticKernel.SemanticFunctions;\n",
-    "\n",
-    "IKernel kernel = Microsoft.SemanticKernel.Kernel.Builder.Build();\n",
     "\n",
     "// Grab the locally stored credentials from the settings.json file. Name the \"backend\" as \"davinci\" — assuming that you're using one of the davinci completion models. \n",
     "\n",
     "var (useAzureOpenAI, model, azureEndpoint, apiKey, orgId) = Settings.LoadFromFile();\n",
     "\n",
-    "if (useAzureOpenAI)\n",
-    "    kernel.Config.AddAzureOpenAITextCompletion(\"davinci\", model, azureEndpoint, apiKey);\n",
-    "else\n",
-    "    kernel.Config.AddOpenAITextCompletion(\"davinci\", model, apiKey, orgId);"
+    "IKernel kernel = Microsoft.SemanticKernel.Kernel.Builder\n",
+    "    .WithAzureChatCompletionService(\n",
+    "        deploymentName: model,\n",
+    "        endpoint: azureEndpoint,\n",
+    "        apiKey: apiKey\n",
+    "    )\n",
+    "    .Build();"
    ]
   },
   {
@@ -96,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -198,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -237,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
