--- a/e8-bonus-prompts/notebook.ipynb
+++ b/e8-bonus-prompts/notebook.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -56,27 +56,26 @@
    },
    "outputs": [],
    "source": [
-    "#r \"nuget: Microsoft.SemanticKernel, 0.9.61.1-preview\"\n",
+    "#r \"nuget: Microsoft.SemanticKernel, 0.15.230531.5-preview\"\n",
     "\n",
     "#!import ../config/Settings.cs\n",
     "\n",
     "using Microsoft.SemanticKernel;\n",
-    "using Microsoft.SemanticKernel.KernelExtensions;\n",
     "using System.IO;\n",
-    "using Microsoft.SemanticKernel.Configuration;\n",
     "using Microsoft.SemanticKernel.SemanticFunctions;\n",
     "using Microsoft.SemanticKernel.Orchestration;\n",
-    "\n",
-    "IKernel kernel = Microsoft.SemanticKernel.Kernel.Builder.Build();\n",
     "\n",
     "// Grab the locally stored credentials from the settings.json file. Name the \"backend\" as \"davinci\" — assuming that you're using one of the davinci completion models. \n",
     "\n",
     "var (useAzureOpenAI, model, azureEndpoint, apiKey, orgId) = Settings.LoadFromFile();\n",
     "\n",
-    "if (useAzureOpenAI)\n",
-    "    kernel.Config.AddAzureOpenAITextCompletion(\"davinci\", model, azureEndpoint, apiKey);\n",
-    "else\n",
-    "    kernel.Config.AddOpenAITextCompletion(\"davinci\", model, apiKey, orgId);"
+    "IKernel kernel = Microsoft.SemanticKernel.Kernel.Builder\n",
+    "    .WithAzureChatCompletionService(\n",
+    "        deploymentName: model,\n",
+    "        endpoint: azureEndpoint,\n",
+    "        apiKey: apiKey\n",
+    "    )\n",
+    "    .Build();"
    ]
   },
   {
@@ -101,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -134,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -170,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -225,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -270,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -354,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -403,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -431,6 +430,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
