--- a/e9-bonus-testing/notebook.ipynb
+++ b/e9-bonus-testing/notebook.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -56,27 +56,26 @@
    },
    "outputs": [],
    "source": [
-    "#r \"nuget: Microsoft.SemanticKernel, 0.9.61.1-preview\"\n",
+    "#r \"nuget: Microsoft.SemanticKernel, 0.15.230531.5-preview\"\n",
     "\n",
     "#!import ../config/Settings.cs\n",
     "\n",
     "using Microsoft.SemanticKernel;\n",
-    "using Microsoft.SemanticKernel.KernelExtensions;\n",
     "using System.IO;\n",
-    "using Microsoft.SemanticKernel.Configuration;\n",
     "using Microsoft.SemanticKernel.SemanticFunctions;\n",
     "using Microsoft.SemanticKernel.Orchestration;\n",
-    "\n",
-    "IKernel kernel = Microsoft.SemanticKernel.Kernel.Builder.Build();\n",
     "\n",
     "// Grab the locally stored credentials from the settings.json file. Name the \"backend\" as \"davinci\" — assuming that you're using one of the davinci completion models. \n",
     "\n",
     "var (useAzureOpenAI, model, azureEndpoint, apiKey, orgId) = Settings.LoadFromFile();\n",
     "\n",
-    "if (useAzureOpenAI)\n",
-    "    kernel.Config.AddAzureOpenAITextCompletion(\"davinci\", model, azureEndpoint, apiKey);\n",
-    "else\n",
-    "    kernel.Config.AddOpenAITextCompletion(\"davinci\", model, apiKey, orgId);"
+    "IKernel kernel = Microsoft.SemanticKernel.Kernel.Builder\n",
+    "    .WithAzureChatCompletionService(\n",
+    "        deploymentName: model,\n",
+    "        endpoint: azureEndpoint,\n",
+    "        apiKey: apiKey\n",
+    "    )\n",
+    "    .Build();"
    ]
   },
   {
@@ -91,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -105,7 +104,6 @@
    },
    "outputs": [],
    "source": [
-    "using Microsoft.SemanticKernel.KernelExtensions;\n",
     "using Microsoft.SemanticKernel.SemanticFunctions;\n",
     "\n",
     "string myFun = \"\"\"\n",
@@ -160,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -207,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -221,7 +219,6 @@
    },
    "outputs": [],
    "source": [
-    "using Microsoft.SemanticKernel.KernelExtensions;\n",
     "using Microsoft.SemanticKernel.SemanticFunctions;\n",
     "\n",
     "string myFunNext = \"\"\"\n",
@@ -270,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
